--- a/JavaScript-Applications/Asynchronous Programming-Exercise/05. Accordion/index.html
+++ b/JavaScript-Applications/Asynchronous Programming-Exercise/05. Accordion/index.html
@@ -20,6 +20,9 @@
         </div> -->
     </section>
     <script src="accordion.js"></script>
+    <script>
+        window.onload = solution();
+    </script>
 </body>
 
 </html>
