--- a/JavaScript-Applications/Single Page Applications-Exercise/01.Forum/index.html
+++ b/JavaScript-Applications/Single Page Applications-Exercise/01.Forum/index.html
@@ -9,6 +9,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@600;900&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/3cd69e2433.js" crossorigin="anonymous"></script>
     <title>SoftUni Forum</title>
+    <script src="./app.js" type="module"></script>
 </head>
 
 <body>
@@ -38,7 +39,7 @@
                 <div class="header-background">
                     <span>New Topic</span>
                 </div>
-                <form>
+                <form id="new-topic-form">
                     <div class="new-topic-title">
                         <label for="topicName">Title <span class="red">*</span></label>
                         <input type="text" name="topicName" id="topicName">
