--- a/JavaScript-Applications/Single Page Applications-Exercise/01.Forum/index.html
+++ b/JavaScript-Applications/Single Page Applications-Exercise/01.Forum/index.html
@@ -26,7 +26,7 @@
         <nav>
             <ul>
                 <li>
-                    <a href="#">Home</a>
+                    <a id="home" href="#">Home</a>
                 </li>
             </ul>
         </nav>
@@ -63,10 +63,9 @@
             <div class="topic-title">
 
                 <!-- topic component  -->
-                <div class="topic-container">
-                    
-                </div>
-                
+
+            </div>
+
 
         </main>
 
