--- a/JavaScript-Applications/Single Page Applications-Exercise/01.Forum/index.html
+++ b/JavaScript-Applications/Single Page Applications-Exercise/01.Forum/index.html
@@ -33,8 +33,8 @@
     </header>
 
     <!-- homepage -->
-    <div class="container">
-        <main>
+    <div id="main" class="container ">
+        <main id="home-view">
             <div class="new-topic-border">
                 <div class="header-background">
                     <span>New Topic</span>
