--- a/JavaScript-Applications/Single Page Applications-Exercise/01.Forum/theme-content.html
+++ b/JavaScript-Applications/Single Page Applications-Exercise/01.Forum/theme-content.html
@@ -29,7 +29,7 @@
         </nav>
     </header>
 
-    <div class="container">
+    <div id="user-comment-page" class="container">
         <!-- theme content  -->
         <div class="theme-content">
             <!-- theme-title  -->
