--- a/JavaScript-Applications/Single Page Applications-Exercise/02.Movies/index.html
+++ b/JavaScript-Applications/Single Page Applications-Exercise/02.Movies/index.html
@@ -123,7 +123,7 @@
                 </form>
             </section>
 
-            <section id="movie-example">
+            <section id="movie-details">
                 <div class="container">
                     <div class="row bg-light text-dark">
                         <h1>Movie title: Black Widow</h1>
